@@ -15,7 +15,7 @@ This is a list of some things to do:
 
 24) ungrouping of TiGroup files
 
-25) TiLP-2 => TiLP-2
+25) update testing sheet
 
 //------
 
