@@ -25,7 +25,7 @@
 	      <accelerator key="X" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image121">
+		<widget class="GtkImage" id="image133">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-cut</property>
 		  <property name="icon_size">1</property>
@@ -48,7 +48,7 @@
 	      <accelerator key="C" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image122">
+		<widget class="GtkImage" id="image134">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-copy</property>
 		  <property name="icon_size">1</property>
@@ -71,7 +71,7 @@
 	      <accelerator key="V" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image123">
+		<widget class="GtkImage" id="image135">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-paste</property>
 		  <property name="icon_size">1</property>
@@ -110,7 +110,7 @@
 	      <accelerator key="Delete" modifiers="0" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image124">
+		<widget class="GtkImage" id="image136">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-delete</property>
 		  <property name="icon_size">1</property>
@@ -183,7 +183,7 @@
 	      <signal name="activate" handler="rbm_move_to_parent_dir1_activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image125">
+		<widget class="GtkImage" id="image137">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-goto-top</property>
 		  <property name="icon_size">1</property>
@@ -205,7 +205,7 @@
 	      <signal name="activate" handler="rbm_set_as_working_dir1_activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image126">
+		<widget class="GtkImage" id="image138">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-save</property>
 		  <property name="icon_size">1</property>
@@ -233,7 +233,7 @@
 	      <signal name="activate" handler="rbm_update_window1_activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image127">
+		<widget class="GtkImage" id="image139">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-refresh</property>
 		  <property name="icon_size">1</property>
@@ -276,6 +276,37 @@
 	      <property name="label" translatable="yes">_Group</property>
 	      <property name="use_underline">True</property>
 	      <signal name="activate" handler="rbm_group1_activate"/>
+	    </widget>
+	  </child>
+	</widget>
+      </child>
+    </widget>
+  </child>
+
+  <child>
+    <widget class="GtkMenuItem" id="tigroups1">
+      <property name="visible">True</property>
+      <property name="label" translatable="yes">_TiGroups</property>
+      <property name="use_underline">True</property>
+
+      <child>
+	<widget class="GtkMenu" id="tigroups1_menu">
+
+	  <child>
+	    <widget class="GtkMenuItem" id="ungroup2">
+	      <property name="visible">True</property>
+	      <property name="label" translatable="yes">_Ungroup</property>
+	      <property name="use_underline">True</property>
+	      <signal name="activate" handler="rbm_ungroup2_activate" last_modification_time="Mon, 28 Aug 2006 07:30:13 GMT"/>
+	    </widget>
+	  </child>
+
+	  <child>
+	    <widget class="GtkMenuItem" id="group2">
+	      <property name="visible">True</property>
+	      <property name="label" translatable="yes">_Group</property>
+	      <property name="use_underline">True</property>
+	      <signal name="activate" handler="rbm_group2_activate" last_modification_time="Mon, 28 Aug 2006 07:30:13 GMT"/>
 	    </widget>
 	  </child>
 	</widget>
