@@ -33,6 +33,9 @@ gchar *s = N_("Ungroup selected file(s)");
 gchar *s = N_("_Ungroup");
 gchar *s = N_("Group selected file(s) together");
 gchar *s = N_("_Group");
+gchar *s = N_("_TiGroups");
+gchar *s = N_("_Ungroup");
+gchar *s = N_("_Group");
 gchar *s = N_("Options");
 gchar *s = N_("Show all files");
 gchar *s = N_("Confirm delete/overwrite");
