@@ -2,12 +2,15 @@ SubVersion: $Id$
 
 Log of changes:	tilp (cables, calcs, files, ticonv)
 
+- 28/08/2006, version 0.24 (0.1.4, 0.2.6, 0.2.7, 0.0.5): roms
+	- added grouping/ungroup of TiGroup file in the clist popup menu
+
 - 26/08/2006, version 0.23 (0.1.4, 0.2.6, 0.2.7, 0.0.5): roms
 	- source code is frozen: entering in testing phase
 	- check return value of all tifiles_xxxx calls into TiLP
 	- reworked user boxes: use GTK standard ones instead
-	//- use GTK+ stock id's
 	- fixed 'Current Folder' button
+		=> released on 28/08/2006.
 
 - 22/08/2006, version 0.22 (0.1.3, 0.2.5, 0.2.6, 0.0.5): roms
 	- added full TiGroup support (sending only)
